--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  fl_chart: ^0.55.0
 
   # The following adds the Cupertino Icons font to your application.
   cupertino_icons: ^1.0.8
